Cleaning up logging. Optimizing non-aggregated export. Latent batch task work in progress.
